--- a/w09-project-md21-yul10-diegoac3.Rmd
+++ b/w09-project-md21-yul10-diegoac3.Rmd
@@ -95,165 +95,10 @@ knitr::kable(head(sample_data[, c(
 )]))
 ```
 
-## Exploratory Anlaysis
-
-### Univarite Analysis
-
-```{r}
-# read the dataset
-data0 = read.csv('startups1.csv', header = TRUE)
-```
-
-First, we checked the distribution of aquisition price.
-```{r}
-hist(data0$aquisition_price_amount, breaks = 100)
-```
-
-As we can see from the plot above, the distrbution is highly right skewed.
-Then we use the box plot to check if there is any outliers.
-```{r}
-boxplot(data0$aquisition_price_amount)
-```
-
-As we can see there is one record in the dataset with extremely high acquicition price. We checked the database further and found its acqusition price is 2600 billion, which equals the valuation of google and amazon. So we think this one should be an database error, we will exclude this database in our further analysis.
-```{r}
-data1 = data0[data0$aquisition_price_amount < 10^12,]
-```
-```{r}
-boxplot(data1$aquisition_price_amount)
-```
-
-After excluding the error in our database, the distribution of aquisition price is still highly right skewed. We will consider the log transformation on the aquisition price.
-
-```{r}
-data1["logprice"] = apply(data1["aquisition_price_amount"],2,log)
-hist(data1$logprice, breaks = 100)
-boxplot(data1$logprice)
-```
-
-The distributino of log aquisition price is relatively sysmetric. From the boxplot we can still find there are many records is outside of the 1.75 IQR. But we think we can start from here to build our model.
-
-Then we checked the precdictor in the database one by one. For category_code, this is a categorical varaible.
-```{r}
-summary(data1$category_code)
-plot(data1$category_code, data1$logprice)
-```
-
-The records concentrated in several major levels of category_code. As for the boxplot between category_code and the response, we can find significant mean within group difference between some groups, which shows this variable has some prediction power. However, at the same time, the varaible within group is also large, which means only relying on this variable cannot lead to a accurate result. So we decided to create some dummy varaibles for the major levels of this variable and put them in our candidate predictor list.
-
-Then we turn to the name of the company. We extract the length of the company name as a feature.
-```{r}
-data1["name_length"] = apply(data1["normalized_name"],2,nchar)
-plot(data1$name_length, data1$logprice)
-```
-
-After check the relationship between length of the company name, we found if the company name has more than 30 characters, the acquisition price tend to decrease. so we plan to create a dummy variable, company name lenght > 30 or not, and add it to our candidate predictor list.
-
-Then we check the logo width.
-```{r}
-plot(data1$logo_width, data1$logprice)
-fit = lm(logprice ~ logo_width, data1)
-abline(fit, col = "red")
-```
-For the plot we found in fact, quite amount of the logo_width is 0. Then we guess, maybe in this column, 0 means missing value. so we decide to remove that part and replot the above figure.
-
-```{r}
-sum(data1$logo_width == 0)
-temp = data1[data1$logo_width > 0, ]
-plot(temp$logo_width, temp$logprice)
-fit = lm(logprice ~ logo_width, temp)
-abline(fit, col = "red")
-```
-
-It turns out there are 502 records in total has 0 logo_width. After removing them, the relationship between logo_width and log price become not that significant. considering the maximum logo_width is more than 5000 times of the minimum width, the data reliability becomes skeptical.
-
-We further checked the log_height.
-
-```{r}
-plot(data1$logo_height, data1$logprice)
-fit = lm(logprice ~ logo_height, data1)
-abline(fit, col = "red")
-```
-```{r}
-sum(data1$logo_height == 0)
-temp = data1[data1$logo_height > 0, ]
-plot(temp$logo_height, temp$logprice)
-fit = lm(logprice ~ logo_height, temp)
-abline(fit, col = "red")
-```
-
-It show the same pattern. Out of curiosity, we create a variable named, logo_ratio, which is the ration of logo height and width.
-
-```{r}
-mask = data1$logo_height > 0
-data1["logo_ratio"] = data1["logo_height"] / data1["logo_width"]
-plot(data1$logo_ratio[mask], data1$logprice[mask])
-fit = lm(logprice ~ logo_ratio, data1[mask,])
-abline(fit, col = "red")
-```
-
-But it turns out seems this variable does not help much. Considering the data sanity issue in those columns, we did not put them to our candidate predictor list.
-
-Then we checked the country_code, which is a categorical variable.
-
-```{r}
-summary(data1$country_code)
-plot(data1$country_code, data1$logprice)
-```
-
-The records concentrated in several major levels of country_code. To be more specific, most records is in USA. As for the boxplot between country_code and the response, we can find significant mean within group difference between some groups, which shows this variable has some prediction power. However, at the same time, the varaible within group is also large, which means only relying on this variable cannot lead to a accurate result. So we decided to create some dummy varaibles for the major levels of this variable  and put them in our candidate predictor list.
-
-The same observation found in city.
-
-```{r}
-summary(data1$city)
-plot(data1$city, data1$logprice)
-```
-
-The records concentrated in several major levels of city. As for the boxplot between city_code and the response, we can find significant mean within group difference between some groups, which shows this variable has some prediction power. However, at the same time, the varaible within group is also large, which means only relying on this variable cannot lead to a accurate result. So we decided to create some dummy varaibles for the major levels of this variable  and put them in our candidate predictor list.
-
-For investiment_rounds, we found it showed a slightly positive correlation with log price. We added it to our candidate predictor list.
-
-```{r}
-plot(data1$investment_rounds, data1$logprice)
-```
-
-For investiment_companies, we found it showed a slightly positive correlation with log price. We added it to our candidate predictor list.
-
-```{r}
-plot(data1$invested_companies, data1$logprice)
-```
-
-For milestones, we found it showed a slightly positive correlation with log price. We added it to our candidate predictor list.
-
-```{r}
-plot(data1$milestones, data1$logprice)
-
-```
-
-For relationships, we found it showed a slightly positive correlation with log price. We added it to our candidate predictor list.
-
-```{r}
-plot(data1$relationships, data1$logprice)
-fit = lm(logprice ~ relationships, data1)
-abline(fit, col = "red")
-```
-### Correlation Analysis
-Then we checked the correlation matrix of the numerical variables.
-```{r}
-data2 = data1[,c("name_length", "investment_rounds", "invested_companies", "milestones", "relationships")]
-cor(data2)
-```
-
-It turns out the `investment_rounds` and `invested_companies` shows strongly collinearity. We should only use one of them in the model to avoid the collinearity issue.
 
 ## Methods
 
-
-
-
 ### Data Exploration
-
 
 #### Univarite Analysis
 
@@ -692,9 +537,9 @@ compare_parameters = function(models,  variables, model_names = 0){
 
 ### Model building
 
-- **Additive Models**
+#### Additive Models
 
-*All variables*
+- **All variables**
 
 The first step of the exploration is to look at a simple additive model that contains all variables.
 
@@ -703,7 +548,7 @@ The first step of the exploration is to look at a simple additive model that con
 additive_full = lm(aquisition_price_amount ~ . , data = startups_tr)
 
 #Diagnostics and performance of the model
-knitr::kable(diagnostics_performance(additive_full), digits = 2)
+knitr::kable(na.omit(diagnostics_performance(additive_full)), digits = 2)
 
 
 #Coefficients with high Variance inflation factors
@@ -730,14 +575,14 @@ cor(resid(model_test_invested_companies_1), resid(model_test_invested_companies_
 
 We remove the invested_companies and state_code from the predictors and train a new model.
 
-*Improving collinearity*
+- **Improving collinearity**
 
 ```{r}
 #Training the model
 additive_full_updated = lm(aquisition_price_amount ~ .-investment_rounds -state_code , data = startups_tr)
 
 #Diagnostics and performance of the model
-knitr::kable(diagnostics_performance(additive_full_updated), digits = 2)
+knitr::kable(na.omit(diagnostics_performance(additive_full_updated)), digits = 2)
 
 #Coefficients with high Variance inflation factors
 knitr::kable(get_vifs(additive_full_updated), digits = 2)
@@ -745,7 +590,7 @@ knitr::kable(get_vifs(additive_full_updated), digits = 2)
 
 In the plots, we can see that normality and constant variance are still suspect. We also see confirm that normality suspect due to the low shapiro-wilk test p-value, and that the constant variance is suspect due to low bp test p-value. The R squared and adjusted R squared remain somewhat similar, as well as the RMSE leave one out cross validation. But we now have less variables with a potentially large collinearity. Outlier and influential points remain somewhat similar.
 
-*Backwards AIC*
+- **Backwards AIC**
 
 Now we will perform a backwards AIC search to optimize for AIC and further decrease collinearity issues.
 
@@ -764,7 +609,7 @@ knitr::kable(get_vifs(model_additive_selected_AIC), digits = 2)
 
 The found model still violates normality and constant variance assumptions, as would normally be expected since this is derived from a model that also violated them. However, we are able to see less predictors with a variance inflation factor higher than 5. Outlier and influential points remain similar. Now we proceed to compare both models with an anova test and decide which is the best additive model.
 
-*Selecting the best additive model*
+- **Selecting the best additive model**
 
 ```{r}
 anova(model_additive_selected_AIC, additive_full_updated)
@@ -775,9 +620,9 @@ We can see that the larger model doesn't offer a statistically significant diffe
 All in all, we won't be focusing on this purely additive model `model_additive_selected_AIC` because of the very low r squared and potential low power to make predictions.
 
 
-- **Interaction Models**
+#### Interaction Models
 
-*Two-way interactions*
+- **Two-way interactions**
 
 We started the exploration by training a 2-way interaction model, excluding investment_rounds and state_code from the variables, due to collinearity.
 
@@ -794,7 +639,7 @@ knitr::kable(na.omit(diagnostics_performance(interaction_model), digits = 2))
 
 Although this model mathematically has a good R squared and adjusted R squared, the normality and constant variance assumptions are still violated. Furthermore, because there are 906 predictors, this is not an easy to understand model. We will find a simplified model doing a backwards AIC search.
 
-*Forward AIC*
+- **Forward AIC**
 
 Because the previous model has 906 predictors, we use a forward search to optimize for computational resources. We tried to follow use a BIC approach so that we optimize for reducing the number of predictors, but the resulting R squared was quite low (0.10), so we decided to continue with the AIC method.
 
@@ -848,7 +693,7 @@ knitr::kable(na.omit(diagnostics_performance(model_interaction_selected), digits
 
 Although this model optimizes for AIC (it has a lower AIC than the first two-way interaction model), this model performs worse in other areas. In particular the both the R squared and adjusted R squared decreased (0.55 and 0.53 respectively). The normality and constant variance assumptions continue to be violated.
 
-*Selecting the best interaction model*
+- **Selecting the best interaction model**
 
 Although we prefer the first two-way interaction model due to its better performance, we run an anova test to check the significance of the additional parameters included on the first two-way model vs the model found via forward AIC.
 
@@ -858,9 +703,9 @@ anova(model_interaction_selected, interaction_model)
 
 The anova test confirms that the initial model does include predictors that are significant. The preferred interaction model is `interaction_model`.
 
-- **Transformation Models**
+#### Transformation Models
 
-*Boxcox method*
+- **Boxcox method**
 
 We start with using the same predictors used in the first 2-way interaction model. We use a $\lambda$ value of 0.12. Also, we apply a logarithmic transformation in the predictors funding_total_usd and relationships (+1 is added to these predictors because there are records with the value 0 which would lead to issues when applying the log transformation), as this showed an improvement in decreasing adjusted r squared and AIC.
 
@@ -889,7 +734,7 @@ knitr::kable(na.omit(diagnostics_performance(model_transformation_boxcox, respon
 
 Although in this model we are seeing lower r squared and adjusted r squared values than we obtained with the two-way interaction model, now the constant variance assumption has improved (we can see this both in the fitted vs residuals plot, and in the result of the bp test, which provides a p-value of 0.9997102). Normality is still suspect.
 
-*Forward AIC, using boxcox model as the scope*
+- **Forward AIC, using boxcox model as the scope**
 
 We use the previously trained model as the full scope for a forward AIC search.
 
@@ -950,7 +795,7 @@ knitr::kable(compare_without_influential(model_transformation_boxcox_selected, t
 
 The model shows a significant improvement in performance (adjusted r squared, AIC, BIC) but the constant variance assumption is violated again. For this reason, we still prefer the original boxcox model `model_transformation_boxcox`.
 
-*Logarithmic transformation in response*
+- **Logarithmic transformation in response**
 
 We also explore using a logarithmic transformation in the response variable, using the same predictors originally used for the first model fitted with the boxcox method above.
 
@@ -965,7 +810,7 @@ knitr::kable(na.omit(diagnostics_performance(model_transformation_log, response_
 
 In R squared and in predicted R squared this model performs marginally worse than the boxcox model, and the constant variance assumption doesn't seem suspect from the bp test (although we can see it's not fully met either from the fitted vs residuals plot). However, in AIC and in BIC, this model shows a more significant drop in performance (drop from 3274 to 3931 in AIC and from 7070 to 7727 in BIC). For that reason we prefer the boxcox model `model_transformation_boxcox` as a transformation-based model
 
-*Forward AIC, using lorarigthmic model as the scope*
+- **Forward AIC, using lorarigthmic model as the scope**
 
 We also use the previously trained log model as the full scope for a forward AIC search.
 
@@ -1020,7 +865,7 @@ knitr::kable(na.omit(diagnostics_performance(model_transformation_log_selected, 
 
 Although this model shows improvements in AIC and BIC, other metrics do not look as good. And the constant variance assumption is more suspect now. For that reason the original logarithmic model `model_transformation_log` seems better, and overall, we still prefer the original boxcox model `model_transformation_boxcox` as a transformation-based model.
 
-- **Summary**
+#### Summary
 
 In summary, the two preferred models are: `interaction_model` (interaction), `model_transformation_boxcox` (transformation). We are omitting `model_additive_selected_AIC` (additive) because of its low r squared.
 
@@ -1052,7 +897,7 @@ Throughout this excercise we have seen that building a model is part art and par
 
 Due to the complex relationships between predictors and response in this dataset, settling on a simple additive model was not enough and we had to fit models with interaction terms and transformations that are not as intuitive to understand but that could improve the models prediction capabilities. Although both models have more than 650 predictors, we made an attempt at drawing inferential conclusions and validate if some of the variables one would intuitively associate with the acquisition price of a startup are actually significant.
 
-- Interaction model
+### Interaction model
 
 The top most significant predictors in the interaction model are not very easy to understand. We can still see that predictors that look intuitively useful like `invested_companies` (number of companies that invested in the start up before) and `istop25` (one of the founders came from a top 25 university) do appear in some of the top interaction terms.
 
@@ -1085,7 +930,7 @@ knitr::kable(results_int)
 ```
 
 
-- Boxcox model
+### Boxcox model
 
 Some of the most significant predictors in the boxcox model also consist of interactions that are not as easy to explain. However, we do see two predictors that are straightforward: log(relationships) and country_codeFRA, and they both have a positive estimate. This is roughly predicting that the more relationships the startup has built, and that if the startup is based in France, the higher the acquisition price.
 
@@ -1117,7 +962,7 @@ results_bc = rbind(funding_total_estimate_bc, invested_companies_estimate_bc, is
 knitr::kable(results_bc)
 ```
 
-- **Summary**
+### Summary
 
 *"It’s Difficult to Make Predictions, Especially About the Future"*
 
@@ -1127,14 +972,7 @@ Predictors we thought could offer a good explanation for the acquisition price o
 
 Identify specific categorical variables instead of having all of the variables in the data. This could have further improved the models while simplifying them.
 
-
-
-
-
-
 ## Appendix: Data Pre-cleaning
-
-
 
 ### Data load 
 
