--- a/w09-project-md21-yul10-diegoac3.Rmd
+++ b/w09-project-md21-yul10-diegoac3.Rmd
@@ -388,9 +388,6 @@ get_rmse = function(model, predict_function = NULL, test_actuals = NULL){
   rsme_val
 }
 
-#get_rmse(model_transformation_boxcox_selected, predict_function = boxcox_reverse_function, test_actuals = startups_te$aquisition_price_amount)
-
-
 # Diagnostic function that performs multiple hypothess tests for the model significance, whether the linear model assumptions are valid, and other model performance metrics 
 diagnostics_performance = function(model, pcol = "grey",  lcol = "dodgerblue", plotit = TRUE,  testit = TRUE, response_transform = NULL, train_actuals = NULL, as_data_frame=TRUE) {
   #Plot functionality
@@ -440,7 +437,7 @@ diagnostics_performance = function(model, pcol = "grey",  lcol = "dodgerblue", p
       "AIC" =  aic,
       "BIC" =  bic,
       "adjR2" =  adj_r_squared,
-      "rsme_looocv" =  rmse_loocv,
+      "rsme_loocv" =  rmse_loocv,
       "outliers.num" = outliers[1],
       "outliers.pct" = outliers[2],
       "influential.num" = influentials[1],
@@ -556,6 +553,7 @@ knitr::kable(get_vifs(additive_full), digits = 2)
 
 ```
 
+
 We can see that model assumptions are clearly violated. We also see that there are variables with a potentially large variance inflation factor. For example, it would make sense to only use investment_rounds or invested_companies, or country or state, because there can be collinearity as discussed in the data exploration section. 1.97% and 2.73% of points are considered to be outliers and to have influence respectevely. Although we can aim to reduce these, in this first exploration of different additive models it does not seem likely this values will change much.
 
 ```{r}
@@ -569,9 +567,8 @@ cor(startups_tr$investment_rounds,startups_tr$invested_companies)
 model_test_invested_companies_1 = lm(invested_companies ~ .-aquisition_price_amount , data = startups_tr)
 model_test_invested_companies_2 = lm(aquisition_price_amount ~ .-invested_companies , data = startups_tr)
 cor(resid(model_test_invested_companies_1), resid(model_test_invested_companies_2))
-
-
 ```
+
 
 We remove the invested_companies and state_code from the predictors and train a new model.
 
@@ -587,6 +584,7 @@ knitr::kable(na.omit(diagnostics_performance(additive_full_updated)), digits = 2
 #Coefficients with high Variance inflation factors
 knitr::kable(get_vifs(additive_full_updated), digits = 2)
 ```
+
 
 In the plots, we can see that normality and constant variance are still suspect. We also see confirm that normality suspect due to the low shapiro-wilk test p-value, and that the constant variance is suspect due to low bp test p-value. The R squared and adjusted R squared remain somewhat similar, as well as the RMSE leave one out cross validation. But we now have less variables with a potentially large collinearity. Outlier and influential points remain somewhat similar.
 
@@ -607,6 +605,7 @@ knitr::kable(get_vifs(model_additive_selected_AIC), digits = 2)
 
 ```
 
+
 The found model still violates normality and constant variance assumptions, as would normally be expected since this is derived from a model that also violated them. However, we are able to see less predictors with a variance inflation factor higher than 5. Outlier and influential points remain similar. Now we proceed to compare both models with an anova test and decide which is the best additive model.
 
 - **Selecting the best additive model**
@@ -614,6 +613,7 @@ The found model still violates normality and constant variance assumptions, as w
 ```{r}
 anova(model_additive_selected_AIC, additive_full_updated)
 ```
+
 
 We can see that the larger model doesn't offer a statistically significant difference in explaining the relationship of predictors and response. For that reason, from the additive models, we prefer the model found through the backwards BIC method `model_additive_selected_AIC`. This model still violates normality and constant variance assumptions, and these will not likely be corrected or at least further improved until we look at more complex interaction models or we apply transformations to predictor or response variables (done below).
 
@@ -636,6 +636,8 @@ interaction_model = lm(aquisition_price_amount ~ (. -investment_rounds -state_co
 knitr::kable(na.omit(diagnostics_performance(interaction_model)), digits = 2, caption = "Performance & Assumptions")
 
 ```
+
+
 
 Although this model mathematically has a good R squared and adjusted R squared, the normality and constant variance assumptions are still violated. Furthermore, because there are 906 predictors, this is not an easy to understand model. We will find a simplified model doing a backwards AIC search.
 
@@ -691,6 +693,7 @@ knitr::kable(na.omit(diagnostics_performance(model_interaction_selected), digits
 
 ```
 
+
 Although this model optimizes for AIC (it has a lower AIC than the first two-way interaction model), this model performs worse in other areas. In particular the both the R squared and adjusted R squared decreased (0.55 and 0.53 respectively). The normality and constant variance assumptions continue to be violated.
 
 - **Selecting the best interaction model**
@@ -700,6 +703,7 @@ Although we prefer the first two-way interaction model due to its better perform
 ```{r}
 anova(model_interaction_selected, interaction_model)
 ```
+
 
 The anova test confirms that the initial model does include predictors that are significant. The preferred interaction model is `interaction_model`.
 
@@ -731,6 +735,7 @@ boxcox_reverse_function = function(lambda = 0.12){
 knitr::kable(na.omit(diagnostics_performance(model_transformation_boxcox, response_transform = boxcox_reverse_function(lambda = 0.12), train_actuals = startups_tr$aquisition_price_amount)), digits = 2, caption = "Performance & Assumptions")
 
 ```
+
 
 Although in this model we are seeing lower r squared and adjusted r squared values than we obtained with the two-way interaction model, now the constant variance assumption has improved (we can see this both in the fitted vs residuals plot, and in the result of the bp test, which provides a p-value of 0.9997102). Normality is still suspect.
 
@@ -787,6 +792,7 @@ model_transformation_boxcox_selected = step(
 knitr::kable(na.omit(diagnostics_performance(model_transformation_boxcox_selected, response_transform = boxcox_reverse_function(lambda = 0.12), train_actuals = startups_tr$aquisition_price_amount)), digits = 2, caption = "Performance & Assumptions")
 ```
 
+
 The model shows a significant improvement in performance (adjusted r squared, AIC, BIC) but the constant variance assumption is violated again. For this reason, we still prefer the original boxcox model `model_transformation_boxcox`.
 
 We also try to remove influential points, just to compare what would happen with the model performance and assumptions.
@@ -795,6 +801,7 @@ We also try to remove influential points, just to compare what would happen with
 ## Evaluate whether removing influential observations helps on the model assumption and fit.
 knitr::kable(compare_without_influential(model_transformation_boxcox_selected, train_data = startups_tr, test_data = startups_te, test_actuals_col = "aquisition_price_amount", response_transform = boxcox_reverse_function(lambda = 0.12)), digits = 2)
 ```
+
 
 We can see that there are not significant changes in r squared, adjusted r squared, and in model assumptions (bptest and wilk-shapiro test). Test RMSE is actually worse for a theoretical model without influential values. All in all, we still prefer the original boxcox model `model_transformation_boxcox`.
 
@@ -810,6 +817,7 @@ model_transformation_log = lm(log(aquisition_price_amount) ~ (. -investment_roun
 knitr::kable(na.omit(diagnostics_performance(model_transformation_log, response_transform = exp, train_actuals = startups_tr$aquisition_price_amount)), digits = 2, caption = "Performance & Assumptions")
 
 ```
+
 
 In R squared and in predicted R squared this model performs marginally worse than the boxcox model, and the constant variance assumption doesn't seem suspect from the bp test (although we can see it's not fully met either from the fitted vs residuals plot). However, in AIC and in BIC, this model shows a more significant drop in performance (drop from 3274 to 3931 in AIC and from 7070 to 7727 in BIC). For that reason we prefer the boxcox model `model_transformation_boxcox` as a transformation-based model
 
@@ -866,6 +874,7 @@ model_transformation_log_selected = step(
 knitr::kable(na.omit(diagnostics_performance(model_transformation_log_selected, response_transform = exp, train_actuals = startups_tr$aquisition_price_amount)), digits = 2, caption = "Performance & Assumptions")
 ```
 
+
 Although this model shows improvements in AIC and BIC, other metrics do not look as good. And the constant variance assumption is more suspect now. For that reason the original logarithmic model `model_transformation_log` seems better, and overall, we still prefer the original boxcox model `model_transformation_boxcox` as a transformation-based model.
 
 #### Summary
@@ -912,6 +921,7 @@ row.names(top_coeff_interaction) = row.names(top_coeff_interaction[1:5,])
 top_coeff_interaction
 ```
 
+
 However, if we check interesting terms that seem useful (`invested_companies`, `istop25`, and `funding_total_usd`) independently we can see that they do not appear significant. And although `funding_total_usd` has a positive estimate (ie. the higher the funding in dollars, the higher the acquisition price), both `invested_companies` and `istop25` have a negative estimate (the more companies invested on a startup the lesser the acquistion price, and having a founder from a top25 university also decreases acquisition price in this model).
 
 ```{r}
@@ -945,6 +955,7 @@ row.names(top_coeff_boxcox) = row.names(top_coeff_boxcox[1:5,])
 top_coeff_boxcox
 ```
 
+
 On the flip side, interesting predictors (`invested_companies`, `istop25`, and `funding_total_usd`) continue to not offer a statistically significant explanation for startup acquisition price in this model. And both `invested_companies` and `istop25` continue to have a negative estimate.
 
 ```{r}
@@ -964,6 +975,7 @@ results_bc = rbind(funding_total_estimate_bc, invested_companies_estimate_bc, is
 #Results
 knitr::kable(results_bc)
 ```
+
 
 ### Summary
 
